# pool-allocator

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  pool_allocator.h  pool_allocator_port.h  pool_allocator_port_api.h  stl_adaptor.h
test/: CMakeLists.txt  googletest.cmake  install_test_library.sh  test.cpp
